# firecore-world

./: Cargo.toml
src/: battle.rs  lib.rs  npc.rs  player.rs
src/gui/: mod.rs
src/map/: manager.rs  mod.rs
src/tile/: texture.rs
