[package]
name = "firecore-world"
version = "0.4.0-alpha.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

firecore-game = { git = "https://github.com/DoNotDoughnut/firecore-game" }
# firecore-game = { path = "../firecore-game" }

firecore-world-lib = { git = "https://github.com/DoNotDoughnut/firecore-world-lib" }
# firecore-world-lib = { path = "../firecore-world-lib" }